tests/negative/bad17.sp
(* definition after main *)

main : Int() {
	return 0;
}

f : String () {
	return 1;
}
